- Commented android resources since we're not using them in Randomizer.Framework.Controls for the moment - Updated the CI file, it should now work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 before_script:
+  - nuget restore
   - dotnet restore
 
 
 build:
   stage: build
   script:
-    - dotnet build -c Debug -c --no-restore
-    - dotnet build -c Release -c --no-restore
+    - MSBuild Randomizer.sln -p:Configuration=Debug
+    - MSBuild Randomizer.sln -p:Configuration=Release
