--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 before_script:
+  - "C:\NuGet\nuget" restore
   - dotnet restore
 
 
 build:
   stage: build
   script:
-    - MSBuild Randomizer.sln -p:Configuration=Debug
-    - MSBuild Randomizer.sln -p:Configuration=Release
+    - "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" Randomizer.sln -p:Configuration=Debug
+    - "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" Randomizer.sln -p:Configuration=Release
