--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
 before_script:
   windows_path:
-  - 'C:\NuGet\nuget' restore
+  - nuget restore
   - dotnet restore
-
 
 build:
   stage: build
   script:
-    - 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe' Randomizer.sln -p:Configuration=Debug
-    - 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe' Randomizer.sln -p:Configuration=Release
+    - MSBuild Randomizer.sln -p:Configuration=Debug
+    - MSBuild Randomizer.sln -p:Configuration=Release
