--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,23 @@
+stages:
+  - build
+  - deploy
+
 before_script:
   - nuget restore
   - dotnet restore
-  - MSBuild .\Randomizer.sln /t:restore
+
 
 build:
   stage: build
   script:
-    - MSBuild Randomizer.sln -p:Configuration=Debug
-    - MSBuild Randomizer.sln -p:Configuration=Release
+    - MSBuild Randomizer.sln /t:restore
+    - MSBuild Randomizer.sln /p:ServerAddress="$MAC_ADRESS" /p:ServerUser="$MAC_USER" /p:ServerPassword="$MAC_PASS" -p:Configuration=Debug 
+    - MSBuild Randomizer.sln /p:ServerAddress="$MAC_ADRESS" /p:ServerUser="$MAC_USER" /p:ServerPassword="$MAC_PASS" -p:Configuration=Release
+deploy:
+  stage: deploy
+  script:
+    - echo "deploying..."
+  environment:
+    name: staging
+    url: https://staging.example.com
+
