--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,17 @@
+# We can't start an android emulator on the Gitlab runner. It stays blocked once they emulator starts and doesn't continue with other commands...
+
 stages:
   - build
   - deploy
 
 before_script:
-  - start /B "android-emu" "emulator" "-avd" %EMULATOR_NAME% # We start the emulator before building so we can deploy to it once the build stage finishes"
+#  - start /B "android-emu" "emulator" "-avd" %EMULATOR_NAME% # We start the emulator before building so we can deploy to it once the build stage finishes"
   - nuget restore
   - dotnet restore
   
 after_script:
-  - adb -s emulator-5554 uninstall fr.ClubInfo.Randomizer # Uninstall the app from the emulator
-  - adb -s emulator-5554 emu kill # Kill the emulator
+#  - adb -s emulator-5554 uninstall fr.ClubInfo.Randomizer # Uninstall the app from the emulator
+#  - adb -s emulator-5554 emu kill # Kill the emulator
 
 build:
   stage: build
@@ -23,7 +25,7 @@ deploy:
   script:
     - echo "Deploying on Android Emulator %EMULATOR_NAME%"
     - MSBuild /t:Install /t:SignAndroidPackage .\Randomizer\Randomizer.Android\Randomizer.Android.csproj /p:AdbTarget="-e %EMULATOR_NAME%" # Install the app on the launched emulator
-    - adb -s emulator-5554 shell monkey -p fr.ClubInfo.Randomizer -c android.intent.category.LAUNCHER 1 # Simulate a click on the app's icon from the launcher
+#    - adb -s emulator-5554 shell monkey -p fr.ClubInfo.Randomizer -c android.intent.category.LAUNCHER 1 # Simulate a click on the app's icon from the launcher
   environment:
     name: staging
     url: https://staging.example.com
