--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Controls/Randomizer.Framework.Controls.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Controls/Randomizer.Framework.Controls.csproj
@@ -49,15 +49,15 @@
   <ItemGroup>
 
     <!-- This None is here so the conditionally included files show up in the Solution Explorer -->
-    <!--<None Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" Exclude="obj\**\*.*;bin\**\*.*;bin;obj" />-->
+    <None Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" Exclude="obj\**\*.*;bin\**\*.*;bin;obj" />
 
     <!--NuGet packages for all platforms-->
-    <PackageReference Include="CardsView" Version="1.4.7" />
+    <PackageReference Include="CardsView" Version="2.1.1" />
     <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
     <PackageReference Include="Goova.Xfx.Controls" Version="1.3.1" />
     <PackageReference Include="SkiaSharp" Version="1.68.0" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
 
     <!--Project references for all platforms-->
     <!-- <ProjectReference Include="..\..\..\Framework\Company.SomeLibrary.csproj" /> -->
