- Updated gitignore to ignore .designer.cs files - Updated class diagram to reflect the actual implementation of the model

--- a/.gitignore
+++ b/.gitignore
@@ -512,3 +512,18 @@ obj/
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 
 # End of https://www.gitignore.io/api/csharp,visualstudio,xamarinstudio
+
+# Xamarin.Android Resource.Designer.cs files
+
+**/*.Android/**/[Rr]esource.[Dd]esigner.cs
+**/*.Droid/**/[Rr]esource.[Dd]esigner.cs
+**/Android/**/[Rr]esource.[Dd]esigner.cs
+**/Droid/**/[Rr]esource.[Dd]esigner.cs
+
+
+
+
+
+
+
+
