--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,14 +17,14 @@ deployandroid:
   stage: deployandroid
   script:
     - MSBuild /t:SignAndroidPackage .\Randomizer\Randomizer.Android\Randomizer.Android.csproj -p:Configuration=Release
-    - curl -X POST "https://api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads" -H "accept: application/json" -H "X-API-Token: 8d270ac0ccd9f8650a15658a87ccaa7d8d490a22" -H "Content-Type: application/json" -d "{ \"release_id\": 0}" > json
+    - curl -X POST "https&#58;//api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads" -H "accept&#58;application/json" -H "X-API-Token&#58; %APP_CENTER_TOKEN%" -H "Content-Type&#58; application/json" -d "{ \"release_id\"&#58; 0}" > json
     - for /f "tokens=*" %t in ('type json ^| jq -r .upload_url') do set upload_url=%t
     - for /f "tokens=*" %t in ('type json ^| jq -r .upload_id') do set upload_id=%t
     - curl -F "ipa=@.\Randomizer\Randomizer.Android\bin\Release\fr.ClubInfo.Randomizer-Signed.apk" %upload_url%
-    - curl -X PATCH --header "Content-Type: application/json" --header "Accept: application/json" --header "X-API-Token: %APP_CENTER_TOKEN%" -d "{ \"status\": \"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads/%upload_id%" > json2
+    - curl -X PATCH --header "Content-Type&#58; application/json" --header "Accept&#58; application/json" --header "X-API-Token&#58; %APP_CENTER_TOKEN%" -d "{ \"status\"&#58; \"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads/%upload_id%" > json2
     - for /f "tokens=*" %t in ('type json ^| jq -r .release_id') do set release_id=%t
     - for /f "tokens=*" %t in ('type json ^| jq -r .release_url') do set release_url=%t
-    - curl -X PATCH --header "Content-Type: application/json" --header "Accept: application/json" --header "X-API-Token: %APP_CENTER_TOKEN%" -d "{ \"destination_name\": \"Testers\", \"release_notes\": \"%CI_COMMIT_MESSAGE%" }" "https://api.appcenter.ms/%release_url%"
+    - curl -X PATCH --header "Content-Type&#58; application/json" --header "Accept&#58; application/json" --header "X-API-Token&#58; %APP_CENTER_TOKEN%" -d "{ \"destination_name\"&#58; \"Testers\", \"release_notes\"&#58; \"%CI_COMMIT_MESSAGE%" }" "https://api.appcenter.ms/%release_url%"
 
   environment:
     name: stagingandroid
@@ -34,15 +34,14 @@ deployios:
   stage: deployios
   script:
     - MSbuild /p:Configuration="Release" /p:Platform="iPhone" /p:ServerAddress=%MAC_ADDRESS% /p:ServerUser=%MAC_USER% /p:ServerPassword=%MAC_PASS% /p:IpaPackageDir="./ipa" /t:Build Randomizer.sln
-    - curl -X POST "https://api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads" -H "accept: application/json" -H "X-API-Token: 8d270ac0ccd9f8650a15658a87ccaa7d8d490a22" -H "Content-Type: application/json" -d "{ \"release_id\": 0}" > json
+    - curl -X POST "https&#58;//api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads" -H "accept&#58; application/json" -H "X-API-Token&#58; %APP_CENTER_TOKEN%" -H "Content-Type&#58; application/json" -d "{ \"release_id\"&#58; 0}" > json
     - for /f "tokens=*" %t in ('type json ^| jq -r .upload_url') do set upload_url=%t
     - for /f "tokens=*" %t in ('type json ^| jq -r .upload_id') do set upload_id=%t
     - curl -F "ipa=@.\Randomizer\Randomizer.iOS\ipa\Randomizer.iOS.ipa" %upload_url%
-    - curl -X PATCH --header "Content-Type: application/json" --header "Accept: application/json" --header "X-API-Token: %APP_CENTER_TOKEN%" -d "{ \"status\": \"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads/%upload_id%" > json2
+    - curl -X PATCH --header "Content-Type&#58; application/json" --header "Accept&#58; application/json" --header "X-API-Token&#58; %APP_CENTER_TOKEN%" -d "{ \"status\"&#58; \"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads/%upload_id%" > json2
     - for /f "tokens=*" %t in ('type json ^| jq -r .release_id') do set release_id=%t
     - for /f "tokens=*" %t in ('type json ^| jq -r .release_url') do set release_url=%t
-    - curl -X PATCH --header "Content-Type: application/json" --header "Accept: application/json" --header "X-API-Token: %APP_CENTER_TOKEN%" -d "{ \"destination_name\": \"Testers\", \"release_notes\": \"%CI_COMMIT_MESSAGE%" }" "https://api.appcenter.ms/%release_url%"
+    - curl -X PATCH --header "Content-Type&#58; application/json" --header "Accept&#58; application/json" --header "X-API-Token&#58; %APP_CENTER_TOKEN%" -d "{ \"destination_name\"&#58; \"Testers\", \"release_notes\"&#58; \"%CI_COMMIT_MESSAGE%" }" "https://api.appcenter.ms/%release_url%"
   environment:
     name: stagingios
     url: https://api.appcenter.ms/%release_url%
-    
