--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
 deployandroid:
   stage: deployandroid
   script:
-    - MSBuild /t:SignAndroidPackage .\Randomizer\Randomizer.Android\Randomizer.Android.csproj -p:Configuration=Release
+    - MSBuild /t:SignAndroidPackage /p:Configuration=Release .\Randomizer\Randomizer.Android\Randomizer.Android.csproj
     - curl -X POST "https&#58;//api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads" -H "accept&#58;application/json" -H "X-API-Token&#58; %APP_CENTER_TOKEN%" -H "Content-Type&#58; application/json" -d "{ \"release_id\"&#58; 0}" > json
     - for /f "tokens=*" %t in ('type json ^| jq -r .upload_url') do set upload_url=%t
     - for /f "tokens=*" %t in ('type json ^| jq -r .upload_id') do set upload_id=%t
