--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ deployandroid:
   stage: deployandroid
   script:
     - MSBuild /t:Clean /p:Configuration=Release
-    - MSBuild /t:SignAndroidPackage /p:Configuration=Release .\Randomizer\Randomizer.Android\Randomizer.Android.csproj
+    - MSBuild /t:SignAndroidPackage /p:Configuration=Release /p:AndroidKeyStore=true /p:AndroidSigningKeyAlias=RandomizerRelease /p:AndroidSigningKeyPass=MySuperPassword /p:AndroidSigningKeyStore=Randomizer.keystore /p:AndroidSigningStorePass=MySuperPassword .\Randomizer\Randomizer.Android\Randomizer.Android.csproj
     - curl -X POST "https://api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads" -H "accept&#58;application/json" -H "X-API-Token:%APP_CENTER_TOKEN% " -H "Content-Type:application/json" -d "{ \"release_id\":0}" > json
     - for /f "tokens=*" %%t in ('type json ^| jq -r .upload_url') do set upload_url=%%t
     - for /f "tokens=*" %%t in ('type json ^| jq -r .upload_id') do set upload_id=%%t
