--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,9 @@ build:
   stage: build
   script:
     - MSBuild Randomizer.sln /p:ServerAddress=%MAC_ADDRESS% /p:ServerUser=%MAC_USER% /p:ServerPassword=%MAC_PASS% -p:Configuration=Debug 
-    - echo built
     
 deployandroid:
-  stage: deployandroid
+  stage: DeployAndroid
   script:
     - MSBuild /t:Clean /p:Configuration=Release
     - MSBuild /p:Configuration=Release /t:SignAndroidPackage .\Randomizer\Randomizer.Android\Randomizer.Android.csproj
@@ -31,12 +30,12 @@ deployandroid:
 
   environment:
     name: stagingandroid
-    url: https://api.appcenter.ms/%release_url%
+    url: https://appcenter.ms/users/juansero29/apps/Randomizer-1/distribute/releases/
     
 deployios:
-  stage: deployios
+  stage: DeployiOS
   script:
-    - MSbuild /p:Configuration="Release" /p:Platform="iPhone" /p:ServerAddress=%MAC_ADDRESS% /p:ServerUser=%MAC_USER% /p:ServerPassword=%MAC_PASS% /p:IpaPackageDir="./ipa" /t:Build Randomizer.sln
+    - MSBuild Randomizer.sln /p:ServerAddress=%MAC_ADRESS% /p:ServerUser=%MAC_USER% /p:ServerPassword=%MAC_PASS% -p:Configuration=Release /p:IpaPackageDir="./ipa"
     - curl -X POST "https://api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads" -H "accept:application/json" -H "X-API-Token:%APP_CENTER_TOKEN%" -H "Content-Type:application/json" -d "{ \"release_id\":0}" > json
     - for /f "tokens=*" %%t in ('type json ^| jq -r .upload_url') do set upload_url=%%t
     - for /f "tokens=*" %%t in ('type json ^| jq -r .upload_id') do set upload_id=%%t
@@ -47,4 +46,4 @@ deployios:
     - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE%" }" "https://api.appcenter.ms/%release_url%"
   environment:
     name: stagingios
-    url: https://api.appcenter.ms/%release_url%
+    url: https://appcenter.ms/users/juansero29/apps/Randomizer/distribute/releases/
