--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deployios:
     - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"status\":\"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads/%upload_id%" > json2
     - for /f "tokens=*" %%t in ('type json2 ^| jq -r .release_id') do set release_id=%%t
     - for /f "tokens=*" %%t in ('type json2 ^| jq -r .release_url') do set release_url=%%t
-    - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE\%" }" "https://api.appcenter.ms/%release_url%"
+    - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE%\" }" "https://api.appcenter.ms/%release_url%"
   environment:
     name: App Center Deployment - iOS
     url: https://appcenter.ms/users/juansero29/apps/Randomizer/distribute/releases/
