--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Controls/Randomizer.Framework.Controls.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Controls/Randomizer.Framework.Controls.csproj
@@ -57,7 +57,7 @@
     <PackageReference Include="Goova.Xfx.Controls" Version="1.3.1" />
     <PackageReference Include="SkiaSharp" Version="1.68.0" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.394984-pre10" />
 
     <!--Project references for all platforms-->
     <!-- <ProjectReference Include="..\..\..\Framework\Company.SomeLibrary.csproj" /> -->
