--- a/Randomizer/Randomizer/Randomizer.csproj
+++ b/Randomizer/Randomizer/Randomizer.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ApiManager\Randomizer.Framework.ApiManager.csproj" />
     <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
     <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+    <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Utils\Randomizer.Framework.Utils.csproj" />
     <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
   </ItemGroup>
 
