--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,9 +28,13 @@ deployandroid:
     - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"status\":\"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%ANDROID_APP_NAME%/release_uploads/%upload_id%" > json2
     - for /f "tokens=*" %%t in ('type json2 ^| jq -r .release_id') do set release_id=%%t
     - for /f "tokens=*" %%t in ('type json2 ^| jq -r .release_url') do set release_url=%%t
-    - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE%\" }" "https://api.appcenter.ms/%release_url%"
+    - echo %release_id%
+    - echo %release_url%
+    - set url="https://api.appcenter.ms/"%release_url%
+    - echo %url%
+    - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE%\" }" %url%
   environment:
-    name: App Center Deployment - Android
+    name: App Center - Android
     url: https://appcenter.ms/users/juansero29/apps/Randomizer-1/distribute/releases/
     
 deployios:
@@ -47,7 +51,11 @@ deployios:
     - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"status\":\"committed\"  }" "https://api.appcenter.ms/v0.1/apps/juansero29/%IOS_APP_NAME%/release_uploads/%upload_id%" > json2
     - for /f "tokens=*" %%t in ('type json2 ^| jq -r .release_id') do set release_id=%%t
     - for /f "tokens=*" %%t in ('type json2 ^| jq -r .release_url') do set release_url=%%t
-    - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE%\" }" "https://api.appcenter.ms/%release_url%"
+    - echo %release_id%
+    - echo %release_url%
+    - set url="https://api.appcenter.ms/"%release_url%
+    - echo %url%
+    - curl -X PATCH --header "Content-Type:application/json" --header "Accept:application/json" --header "X-API-Token:%APP_CENTER_TOKEN%" -d "{ \"destination_name\":\"Testers\", \"release_notes\":\"%CI_COMMIT_MESSAGE%\" }" %url%
   environment:
-    name: App Center Deployment - iOS
+    name: App Center - iOS
     url: https://appcenter.ms/users/juansero29/apps/Randomizer/distribute/releases/
