Revert "- Refactored code from the add/edit list page"
This reverts commit 3520c84bba00b7812c7d56f0692157bcac90b39e

--- a/Randomizer/Randomizer/Randomizer.csproj
+++ b/Randomizer/Randomizer/Randomizer.csproj
@@ -25,10 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Pages\HomePage.xaml">
+    <EmbeddedResource Update="Views\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\ListEditionPage.xaml">
+    <EmbeddedResource Update="Views\ListEditionPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
