--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Utils/Randomizer.Framework.Utils.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Utils/Randomizer.Framework.Utils.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.394984-pre10" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
   </ItemGroup>
 
 </Project>
