--- a/Randomizer/Randomizer.iOS/Randomizer.iOS.csproj
+++ b/Randomizer/Randomizer.iOS/Randomizer.iOS.csproj
@@ -206,6 +206,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Controls\Randomizer.Framework.Controls.csproj">
+      <Project>{4f38e398-edb3-4bc2-a33c-dbec273c1fd6}</Project>
+      <Name>Randomizer.Framework.Controls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Randomizer\Randomizer.csproj">
       <Project>{84F1106D-9541-4337-A76D-BF5B50FD63EF}</Project>
       <Name>Randomizer</Name>
