--- a/Tests/Randomizer.Tests/Randomizer.Tests.Model/Randomizer.Tests.Model.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.Model/Randomizer.Tests.Model.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
   </ItemGroup>
 
 </Project>
