Added first twests for HomePageViewModel

--- a/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+    <ProjectReference Include="..\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
   </ItemGroup>
 
 </Project>
